# agent_max

./: .gitignore  agent.py  main.py  pyproject.toml  render.yaml
.claude/: launch.json
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.css  App.jsx  App.tsx  index.css
frontend/src/components/ui/: blur-fade.tsx  border-beam.tsx  particles.tsx
